--- a/week-2/exercise/index.html
+++ b/week-2/exercise/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8 /">
   <title>My first In Class Assignment</title>
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
