--- a/week-2/exercise/index.html
+++ b/week-2/exercise/index.html
@@ -3,30 +3,46 @@
 <head>
   <meta charset="utf-8 /">
   <title>My first In Class Assignment</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
 
+<div class="container">
+
   <!-- Header Section -->
-  <header class="main-header">
+  <header class="main-header common-height">
+    <div class="logo">
+      <p>logo</p>
+    </div>
+
+    <nav class="main-nav">
+      <p>navi</p>
+    </nav>
+
   </header>
 
   <!-- Search Section -->
-  <section class="search">
+  <section class="search common-height">
   </section>
 
   <!-- hero Section -->
-  <section class="hero">
+  <section class="hero common-height">
   </section>
 
   <!-- Information Section -->
-  <section class="site-info">
+  <section class="site-info common-height">
+    <section class="info01 column cf">1</section>
+    <section class="info02 column cf">2</section>
+    <section class="info03 column cf">3</section>
   </section>
 
   <!-- Footer Section -->
-  <footer class="main-footer">
+  <footer class="main-footer common-height">
   </footer>
+
+</div><!-- end of container -->
 
 </body>
 </html>
